other/e-l/inject-sidecar-deployment/patchedResource2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy-2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
      annotations:
        vault.hashicorp.com/agent-inject: "false" 
    spec:
      containers:
      - image: nginx:latest
        name: nginx
