other/e-l/inject-sidecar-deployment/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-sidecar
status:
  ready: true
